* fix SEND and CONTRACT mis-align bug
 * automatciall update blockHeight and connection status

--- a/src/css/tab.css
+++ b/src/css/tab.css
@@ -265,7 +265,7 @@ a:focus {
     
 }
 #tab ul li:nth-child(3).tabli_active{
-    margin-left: -40px;
+    margin-left: 0px;
     background: url(../img/contact-bai.png) left top no-repeat;
     
 }
